--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "name": "Minima",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "description": "Minimal css boilerplate",
-    "main": "index.js",
+    "main": "dist/minima.min.css",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
     },
